# mokutil

./: .gitignore  Makefile  Makefile.am  README  README.md  TODO  autogen.sh  configure.ac  efi.h  efilib.c  index.html  mokutil.c  params.json
data/: mokutil
man/: Makefile.am  mokutil.1
po/: POTFILES.in  zh_TW.po
src/: Makefile.am  PasswordHash.h  efi.h  efi_hash.c  efi_hash.h  efi_x509.c  efi_x509.h  efilib.c  keyring.c  keyring.h  mokutil-gtk.c  mokutil.c  mokutil.h  password-crypt.c  password-crypt.h  sblist.c  sbversion.h  signature.h  svlist.c  svlist.h  util.c  util.h  utils-gtk.c  utils-gtk.h  utils.c  utils.h
